# twinstore

./: .gitignore  CLAUDE.md  README.md  __init__.py  pipeline.py  pyproject.toml  requirements.txt  requirements_twinstore.txt  types.py
.claude/: settings.json
analysis/: __init__.py
api/: __init__.py
config/: __init__.py  constants.py  defaults.py  validation.py  visualization.py
core/: __init__.py  explainer.py  normalizer.py  predictor.py  similarity.py
data/: __init__.py  anomaly_detector.py  column_validator.py  data_transformer.py  file_reader.py  loader.py  loader_old.py  preprocessor.py  quality_checker.py  sample_generator.py  validator.py
docs/: api_reference.md  best_practices.md  data_format.md  file_input.md  pipeline.md  quick_start.md  srp_architecture.md  visualization.md
examples/: data_input_examples.py  file_input_example.py  pipeline_example.py  visualization_example.py
optimization/: __init__.py
reporting/: __init__.py
spec/: architecture.md  design.md  requirements.md  tasks.md
spec/data-processing/: design.md  requirements.md  tasks.md
spec/pipeline-management/: design.md  requirements.md  tasks.md
spec/sales-prediction/: design.md  requirements.md  tasks.md
spec/similarity-matching/: design.md  requirements.md  tasks.md
spec/visualization/: design.md  requirements.md  tasks.md
tests/: __init__.py  conftest.py  test_integration.py  test_pipeline.py  test_pipeline_file_support.py
tests/core/: test_explainer.py  test_normalizer.py  test_predictor.py  test_similarity.py
tests/data/: test_anomaly_detector.py  test_column_validator.py  test_data_transformer.py  test_file_reader.py  test_loader.py  test_preprocessor.py  test_quality_checker.py  test_validator.py
tests/visualization/: test_sales_alignment_visualizer.py
utils/: __init__.py  data_conversion.py  statistics.py  validation.py
visualization/: __init__.py  sales_alignment_visualizer.py
